@startuml
!pragma layout smetana
skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 16
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #475569
}
skinparam interface {
  BackgroundColor #DBEAFE
  BorderColor #1D4ED8
}

title Observer aplicado a los cambios de reserva

class Reserva {
  - estado: EstadoReserva
  - observadores: List<ObservadorReserva>
  + confirmar(): void
  + cancelar(): void
  + finalizar(): void
  + agregarObservador(o): void
  + eliminarObservador(o): void
  - cambiarEstado(nuevoEstado): void
}

interface ObservadorReserva {
  + actualizar(reserva, anterior, actual): void
}

class CalendarioObserver
class PanelTutoriasObserver
class NotificacionReservaObserver {
  - fabrica: NotificacionFactory
}
abstract class NotificacionFactory {
  + notificar(destinatario, mensaje): void
}

Reserva "1" o-- "0..*" ObservadorReserva : notifica
CalendarioObserver ..|> ObservadorReserva
PanelTutoriasObserver ..|> ObservadorReserva
NotificacionReservaObserver ..|> ObservadorReserva
NotificacionReservaObserver --> NotificacionFactory : reutiliza Ae2

@enduml
